--- a/app/assets/stylesheets/box.css
+++ b/app/assets/stylesheets/box.css
@@ -22,7 +22,7 @@
   display:table;
   width: 370px;
   padding: 10px;
-  background: #F7F5F5 url(/claco/img/paper.jpg) repeat;
+  background: #FFFFFF;
   -webkit-border-radius:4px;
   -moz-border-radius:4px;
   border-radius:4px;
@@ -74,18 +74,8 @@
   color:#555;
   font-size:12px;
   text-shadow: 0px 1px 1px #eee;
-
-  padding:15px 15px 15px 15px;
-
-  background:#fff;
-
-  -moz-box-shadow:0 1px 3px rgba(34,25,25,0.4);
-  -webkit-box-shadow:0 1px 3px rgba(34,25,25,0.4);
-  box-shadow: 0 1px 3px rgba(34,25,25,0.4);
-
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+  padding-top:5px;
+  margin-bottom:0px !important;
 }
 
 #facebox .content .bodcon .conitem .lablr{
