--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -122,7 +122,7 @@ end %>
 					            <li><a id="rename-act" class="modaction">Rename</a></li>
 					            <li><a href="#">Copy</a></li>
 					            <li><a href="#">Move</a></li>
-					            <li><a href="#">Delete</a></li>
+					            <li><a id="delete-act" class="modaction">Delete</a></li>
 					          </ul>
 
 					        </div>
@@ -307,5 +307,45 @@ end %>
 
 		</form>
 	</div>
+
+
+
+
+
+	<div id="delete-form" style="display:none">
+		<div class="headtitle">
+		  Delete
+		</div>
+
+		<div class="errorBox"></div>
+
+		<form action="#" class="bodcon">
+		  <div class="conitem">
+		    <div style="margin: 5px 0 5px 0">Are you <strong>absolutely positive</strong> you want to delete this?</div>
+		    <input name="conid" class="conid" type="hidden" />
+
+		  </div>
+
+		  <div class="buttonbar">
+		     <button class="btn btn-danger showloader" type="submit">Yes, delete this!</button>
+		     <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+		  </div>
+
+		</form>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </div>
