show layout fixup

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -20,7 +20,7 @@ end %>
 
 <%= javascript_tag do %>
 	isEditable=<%= @binder.get_access(current_teacher.id.to_s) > 0 ? "true" : "false"  %>;
-<% end %>
+<% end %>z
 
 			<div class="descbox content-editable">
 				<%= image_tag("pin.png", :class => 'pinim') %>
