--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
 		<%= javascript_include_tag "dropdown" %>
 		<%= javascript_include_tag "facebox" %>
 		<%= javascript_include_tag "tooltip" %>
-
+		<script type="text/javascript">
+			$('a').pjax('[data-pjax-container]')
+		</script>
 		<%= yield :headcon %>
 
 		<%= csrf_meta_tags %>
@@ -27,8 +29,9 @@
 		<%= current_teacher.inspect %>
 		<% end %> -->
 		<%= %> <!-- render 'shared/error_messages' -->
-		<%= yield %>
-
+		<div data-pjax-container>
+			<%= yield %>
+		</div>
 
 
 		<div class="container">
@@ -37,7 +40,7 @@
 			<hr>
 
 			<footer>
-			<p>&copy; ClassConnect 2012</p>
+			<p>&copy; ClassConnect 2012 <%= Random.rand(1001) %></p>
 			</footer>
 		</div>
 
