Rename wired up

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -295,7 +295,7 @@ end %>
 
 		<form action="#" class="bodcon">
 		  <div class="conitem">
-		    <input name="title" class="firstfocus rename-title" style="width:260px" type="text" />
+		    <input name="newtitle" class="firstfocus rename-title" style="width:260px" type="text" />
 		    <input name="conid" class="conid" type="hidden" />
 
 		  </div>
