--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -20,7 +20,7 @@ end %>
 
 <%= javascript_tag do %>
 	isEditable=<%= @binder.get_access(current_teacher.id.to_s) > 0 ? "true" : "false"  %>;
-<% end %>z
+<% end %>
 
 			<div class="descbox content-editable">
 				<%= image_tag("pin.png", :class => 'pinim') %>
@@ -120,7 +120,7 @@ end %>
 
 					          <ul class="dropdown-menu">
 					            <li><a id="rename-act" class="modaction">Rename</a></li>
-					            <li><a href="#">Copy</a></li>
+					            <li><a id="copy-act" class="modaction">Copy</a></li>
 					            <li><a href="#">Move</a></li>
 					            <li><a id="delete-act" class="modaction">Delete</a></li>
 					          </ul>
@@ -231,7 +231,7 @@ end %>
 
             <div class="tag-group tagged-other">
               <div class="announce">
-                Other
+                Keywords
               </div>
 
 
@@ -246,7 +246,7 @@ end %>
 
 
             <div id="other-addarea" class="add-area tagenter">
-              <input type="text" class="add-field other-addfield" placeholder="Ex: 'California', 'edchat'" />
+              <input type="text" class="add-field other-addfield" placeholder="Ex: 'Civil War', 'edchat'" />
               <div class="empty-auto-hold">Hit enter to add tag...</div>
             </div>
 
@@ -333,6 +333,75 @@ end %>
 
 		</form>
 	</div>
+
+
+
+
+  <div id="copy-form" style="display:none">
+    <div class="headtitle">
+      Copy
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+
+
+        
+
+        <div class="fol-picker" style="margin-bottom:10px">
+
+          <div class="togbar" onclick="togglePicker(this)">
+            <span class="chosenTitle">
+              <i>Choose a binder or folder to copy to</i>
+            </span>
+            <div class="down-arrow"></div>
+            <input type="hidden" name="folid" class="chosenOne" value="" />
+          </div>
+
+          <div class="pickerpane">
+
+            <div class="bndr">
+
+              <div class="dir" folid="xyz">
+                <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+                <span class="dirtitle" onclick="selectPickFolder(this)">
+                  <img src="/assets/binders/folder.png" class="foldicon" />
+                  Math Semester 1
+                </span>
+                <div class="dirWrap"></div>
+
+              </div>
+            </div>
+
+            <div class="bndr">
+
+              <div class="dir" folid="abc">
+                <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+                <span class="dirtitle" onclick="selectPickFolder(this)">
+                  <img src="/assets/binders/folder.png" class="foldicon" />
+                  DES Semester 1
+                </span>
+                <div class="dirWrap"></div>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Copy this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
 
 
 
