--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -412,7 +412,7 @@ end %>
               <i>Choose a binder or folder to move this to</i>
             </span>
             <div class="down-arrow"></div>
-            <input type="hidden" name="folid" class="chosenOne" value="" />
+            <input type="hidden" name="target" class="chosenOne" value="" />
           </div>
 
           <div class="pickerpane">
@@ -444,7 +444,7 @@ end %>
       </div>
 
       <div class="buttonbar">
-         <button class="btn btn-primary showloader" type="submit">Copy this!</button>
+         <button class="btn btn-primary showloader" type="submit">Move this!</button>
          <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
       </div>
 
