--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -107,7 +107,7 @@ end %>
 
 
 
-			            <div class="titler"><%= link_to binder.title, named_binder_route(binder), :class => "pjax" %></div>
+			            <div class="titler"><%= link_to binder.title, named_binder_route(binder), :class => binder.type == 1 ? "pjax" : "" %></div>
 
 			            <div class="descarea">Last updated by <a href="#">Eric Simons</a> at 2:33pm</div>
 
