--- a/app/views/layouts/_breadcrumbs.html.erb
+++ b/app/views/layouts/_breadcrumbs.html.erb
@@ -13,11 +13,11 @@
 					<li><%= link_to "Trash", trash_path %></li>
 
 				<% else %>
-					<li><%= link_to parent["title"], named_binder_route(parent["id"]) %></li>
+					<li><%= link_to parent["title"], named_binder_route(parent["id"]), :class => "pjax" %></li>
 				<% end %>
 			<% end %>
 
-			<li class="current-folder"><%= link_to @binder.title, named_binder_route(@binder) %></li>
+			<li class="current-folder"><%= link_to @binder.title, named_binder_route(@binder), :class => "pjax" %></li>
 
   		</ul>
       </div>
