tag fetch bugs fixed

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -188,7 +188,7 @@ end %>
 
 
             <div id="grade-addarea" class="add-area tagenter" style="display: none; opacity: 0;" 
-            <%= tagvis(@tags[0]) 
+            <%= #tagvis(@tags[0]) 
             %>>
               <input type="text" class="add-field grade-addfield" placeholder="Ex: '1st', 'Second Grade'" />
               <div class="empty-auto-hold">Hit enter to add tag...</div>
