Adding content wired up

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -333,7 +333,7 @@ end %>
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
         <textarea class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the web page"></textarea>
 
-        <input name="conid" class="conid" type="hidden" />
+        <% #<input name="conid" class="conid" type="hidden" /> %>
 
       </div>
 
