no tagvis on input boxes

--- a/app/views/layouts/_breadcrumbs.html.erb
+++ b/app/views/layouts/_breadcrumbs.html.erb
@@ -36,8 +36,8 @@
           </button>
           <ul class="dropdown-menu" style="margin-left:-95px">
             <li><a href="#" onClick="popForm('addweb-form', this); return false">Web Bookmark / Embed</a></li>
-            <li><a href="#" onClick="jQuery.facebox({ div: '#jack' }); return false">Upload File</a></li>
-            <li><a href="#">New Folder</a></li>
+            <li><a href="#" onClick="popForm('addfile-form', this); return false">Upload File</a></li>
+            <li><a href="#" onClick="popForm('addfolder-form', this); return false">New Folder</a></li>
           </ul>
         </div>
 
