tag fetch bugs fixed 2

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -217,7 +217,7 @@ end %>
 
 
             <div id="subject-addarea" class="add-area tagenter" style="display: none; opacity: 0;" 
-            <%= tagvis(@tags[1]) 
+            <%= #tagvis(@tags[1]) 
             %>>
               <input type="text" class="add-field subject-addfield" placeholder="Ex: 'Math', 'History'" />
               <div class="empty-auto-hold">Hit enter to add tag...</div>
