--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -397,7 +397,7 @@ end %>
       <div class="conitem">
 
         <div class="file-upload-btn">
-          <button class="btn btn-primary" style="font-size:16px; font-weight:bolder; padding:15px 20px 15px 20px">Choose a file to upload!</button>
+          <a class="btn btn-primary" style="font-size:16px; font-weight:bolder; padding:15px 20px 15px 20px">Choose a file to upload!</a>
           <input name="file" class="filepick" style="width:300px" type="file" />
         </div>
 
