--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -337,7 +337,7 @@ end %>
         <input name="webtitle" class="webtitle" style="width:300px" type="text" placeholder="Title of the web page" />
 
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
-        <textarea class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the web page"></textarea>
+        <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the web page"></textarea>
 
         <% #<input name="conid" class="conid" type="hidden" /> %>
 
@@ -368,7 +368,7 @@ end %>
         <input name="foldertitle" class="firstfocus webtitle" style="width:300px" type="text" placeholder="Title of the new folder" />
 
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
-        <textarea class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
+        <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
 
         <input name="conid" class="conid" type="hidden" />
 
@@ -403,7 +403,7 @@ end %>
 
 
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
-        <textarea class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
+        <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
 
         <input name="conid" class="conid" type="hidden" />
 
