--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -393,20 +393,15 @@ end %>
       <div class="conitem">
 
         <div class="file-upload-btn">
-          <a class="btn btn-primary" style="font-size:16px; font-weight:bolder; padding:15px 20px 15px 20px">Choose a file to upload!</a>
-          <input name="file" class="filepick" style="width:300px" type="file" />
+          <input name="file" class="filepick" type="file" />
+          <a class="btn btn-primary btnsauce">Choose a file to upload!</a>
         </div>
 
-
-        <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
-        <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
-
-        <input name="conid" class="conid" type="hidden" />
 
       </div>
 
       <div class="buttonbar">
-         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+         <button class="btn canceler" type="reset" onClick="$('#facebox .filepick').fileupload('destroy'); closefBox()">Cancel</button>
       </div>
 
     </form>
