--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -115,7 +115,7 @@ end %>
 
 			            <div class="titler"><%= link_to binder.title, named_binder_route(binder), :class => binder.type == 1 ? "pjax" : "" %></div>
 
-			            <div class="descarea">Last updated by <%= link_to binder.handle, "#" %> at <%= Time.at(binder.last_update).to_datetime %></div>
+			            <div class="descarea">Last updated by <%= link_to binder.user, "#" %> at <%= Time.at(binder.last_update).to_datetime %></div>
 
 			            <div class="drop-tog">
 			            	<div class="btn-group">
