--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -32,11 +32,7 @@ end %>
 				<%= image_tag("pin.png", :class => 'pinim') %>
           <div class="inner">
 
-            <div class="real-text">
-            	<% if !@binder.body.blank? %>
-					<%= @binder.body.html_safe %>
-				<% end %>
-            </div>
+            <div class="real-text"><%= @binder.body.html_safe if !@binder.body.blank? %></div>
 
 
 
