--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -330,7 +330,7 @@ end %>
     <form action="#" class="bodcon">
       <div class="conitem">
         <input name="weblink" class="weblink" style="width:300px" type="text" placeholder="http:// or <embed>" />
-        <input name="webtitle" class="webtitle" style="width:300px" type="text" placeholder="Title of the web page" />
+        <input name="webtitle" maxlength="55" class="webtitle" style="width:300px" type="text" placeholder="Title of the web page" />
 
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
         <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the web page"></textarea>
@@ -359,7 +359,7 @@ end %>
 
     <form action="#" class="bodcon">
       <div class="conitem">
-        <input name="foldertitle" class="firstfocus webtitle" style="width:300px" type="text" placeholder="Title of the new folder" />
+        <input name="foldertitle" maxlength="55" class="firstfocus webtitle" style="width:300px" type="text" placeholder="Title of the new folder" />
 
         <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
         <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
@@ -414,7 +414,7 @@ end %>
 
 		<form action="#" class="bodcon">
 		  <div class="conitem">
-		    <input name="newtitle" class="firstfocus rename-title" style="width:260px" type="text" />
+		    <input name="newtitle" maxlength="55" class="firstfocus rename-title" style="width:260px" type="text" />
 		    <input name="conid" class="conid" type="hidden" />
 
 		  </div>
