--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -37,7 +37,7 @@ end %>
 
 
 	
-    <% if @binder.type == 1 %>
+    <% if params[:action] == "index" || @binder.type == 1 %>
 
 		<div class="content-list">
 
