--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -97,7 +97,12 @@ end %>
 			<% else %>
 				<% @children.each do |binder| %>
 
+          <% imgarr = Binder.get_folder_array(binder.id.to_s) if binder.type == 1 %>
 
+          <%
+            # imgarr is an array of length 0 to 3 that contains the URLs of the images
+            # the first image is the large thumbnail, the second and third are the small thumbnails
+          %>
 
 					<div id="<%= binder.id %>" class="content-item<%= ' droppable' if binder.type == 1 %>">
 
