--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -641,7 +641,7 @@
 .folder-preview .single-hold {
   float:left;
   height: 92px;
-  width:200px;
+  width:180px;
   display:block;
   text-align:center;
   overflow:hidden;
@@ -649,22 +649,8 @@
 
    background-repeat:no-repeat;
    background-position:center;
-   background-size:200px;
 }
 
-.folder-preview .primary-hold {
-  float:left;
-  height: 92px;
-  width:130px;
-  display:block;
-  text-align:center;
-  overflow:hidden;
-  position:relative;
-
-   background-repeat:no-repeat;
-   background-position:center;
-   background-size:150px;
-}
 
 
 .folder-preview .thumb-wrap {
@@ -675,23 +661,13 @@
 .folder-preview .thumb1 {
   height:46px;
   width:49px;
-  background-repeat:no-repeat;
-  background-position:center;
-  background-size:100px;
-
-
-
+  float:right;
 }
 
 .folder-preview .thumb2 {
-  margin-top:1px;
   height:46px;
   width:49px;
-  background-repeat:no-repeat;
-  background-position:center;
-  background-size:100px;
-
-
+  float:right;
 }
 
 
