--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -57,20 +57,36 @@ end %>
 
 					<div id="<%= binder.id %>" class="content-item<%= ' droppable' if binder.type == 1 %>">
 
-			            <div class="folder-preview">
-			              <div class="single-hold" style="background-image:url('get_binder_image(binder)');">
 
-                      <div class="thumb-wrap">
-                        <img class="thumb1" src="<%= imgarr[1] %>" />
+                  <% if binder.type != 1 
+                    # is a file/link 
+                  %> 
 
-                        <br />
-
-                        <img class="thumb2" src="<%= imgarr[2] %>" />
+                    <div class="folder-preview">
+                      <div class="single-hold" style="background-image:url('<%= get_binder_image(binder) %>');">
                       </div>
+                    </div>
 
-			              </div>
-			            </div>
+                  <% else 
+                    # is a folder
+                  %>
 
+    		            <div class="folder-preview">
+    		              <!-- <div class="single-hold" src="<%= imgarr[0].to_s %>" > -->
+                      <div class="single-hold" style="background-image:url('<%= imgarr[0].to_s %>');">
+
+                        <div class="thumb-wrap">
+                          <img class="thumb1" src="<%= imgarr[1].to_s %>" />
+
+                          <br />
+
+                          <img class="thumb2" src="<%= imgarr[2].to_s %>" />
+                        </div>
+
+    		              </div>
+    		            </div>
+
+                  <% end %>
 
 
 			            <div class="titler"><%= link_to binder.title, named_binder_route(binder), :class => binder.type == 1 ? "pjax" : "" %></div>
