--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -1,6 +1,6 @@
-<% content_for :headcon do
-	stylesheet_link_tag 'binders/folder'
-end %>
+<% content_for :headcon do %>
+	<% stylesheet_link_tag 'binders/folder' %>
+<% end %>
 
 <%= render 'layouts/breadcrumbs' %>
 
