Added embed functionality, get_html method, removed add button from content views

--- a/app/views/layouts/_breadcrumbs.html.erb
+++ b/app/views/layouts/_breadcrumbs.html.erb
@@ -26,6 +26,7 @@
       <%= @binder.title %>
       </div>
 
+      <% if @binder.type == 1 %>
       <div class="buttonbox">
 
         <div class="btn-group">
@@ -42,7 +43,7 @@
         </div>
 
       </div>
-
+      <% end %>
     </div>
   </div>
 </div>
