--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -362,18 +362,23 @@
 
             <% Binder.where("parent.id" => "0", :owner => current_teacher.id).each do |binder| %>
 
-            <div class="bndr">
 
-              <div class="dir" folid="<%= binder.id.to_s %>" turl="<%= named_binder_route(binder) %>">
-                <div class="arrow-right" onclick="togglePickFolder(this)"></div>
-                <span class="dirtitle" onclick="selectPickFolder(this)">
-                  <img src="/assets/binders/folder.png" class="foldicon" />
-                  <%= binder.title %>
-                </span>
-                <div class="dirWrap"></div>
+              <% if binder.parent["id"] == "0" %>
 
-              </div>
-            </div>
+                <div class="bndr">
+
+                  <div class="dir" folid="<%= binder.id.to_s %>" turl="<%= named_binder_route(binder) %>">
+                    <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+                    <span class="dirtitle" onclick="selectPickFolder(this)">
+                      <img src="/assets/binders/folder.png" class="foldicon" />
+                      <%= binder.title %>
+                    </span>
+                    <div class="dirWrap"></div>
+
+                  </div>
+                </div>
+
+              <% end %>
 
             <% end %>
 
